--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>James Co's Blogs</h1>
+        <h1>The James Co Blogs</h1>
         <p>My blog site</p>
         <p class="view"><a href="https://github.com/hcamdclk8/JCO-blogs">View the Project on GitHub <small>hcamdclk8/JCO-blogs</small></a></p>
         <ul>
