--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ fast iterative process and I started to strike out my list of questions until I 
      
       <section>
         <h1>
-<a id="my-first-experience-building-a-skill-for-amazons-alexa" class="anchor" href="#my-first-experience-building-a-skill-for-amazons-alexa" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Tips on customizing /h1>
+<a id="blog2" class="anchor" href="#blog2" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Tips on customizing</h1>
 
 <p>I was fortunate enough to work on developing my initial skill for Alexa using Amazon's friendly Trivia Game template today. The guide says one can set it up within an hour which I found to be accurate but excludes the actual authoring of the trivia. This took a little longer and needs some forethought. I decided to set up a Superman Trivia game consisting of 35 questions. Since I'm a big Superman fan, it didn't take me long to write up all the questions and the corresponding answers. I then proceeded to test the code using Amazon's developer console. Since the trivia uses the random function
 in JavaScript, one needs to iterate through the code several times to be able to capture all the questions. It was a very
